<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="16dp"
    android:layout_marginHorizontal="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="12dp"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/imgAnnouncement"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/content_description_label_complaint_report"
            android:background="@drawable/background_circle"
            android:backgroundTint="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="6dp"
            android:src="@drawable/ic_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/list_label_complaint_report"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txtReportId"
            app:layout_constraintStart_toEndOf="@id/imgAnnouncement"
            app:layout_constraintTop_toTopOf="@id/imgAnnouncement" />

        <TextView
            android:id="@+id/txtReportId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginEnd="30dp"
            android:textSize="11sp"
            tools:text="reportId"
            app:layout_constraintEnd_toStartOf="@id/txtStatus"
            app:layout_constraintBottom_toBottomOf="@id/imgAnnouncement"
            app:layout_constraintStart_toStartOf="@id/txtLabel" />

        <TextView
            android:id="@+id/txtDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:textSize="13sp"
            tools:text="Sen, 12 Jan - 12:40"
            app:layout_constraintBottom_toTopOf="@id/txtStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgAnnouncement"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_6_radius"
            tools:backgroundTint="@android:color/holo_purple"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingVertical="3dp"
            tools:text="Terkirim"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/imgAnnouncement"
            app:layout_constraintEnd_toEndOf="@id/txtDateTime"
            app:layout_constraintTop_toBottomOf="@id/txtDateTime" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/imgAnnouncement" />

        <ImageView
            android:id="@+id/imgVehicle"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_label_name_vehicle"
            android:src="@drawable/ic_vehicle"
            app:layout_constraintStart_toStartOf="@id/imgAnnouncement"
            app:layout_constraintTop_toTopOf="@id/txtLegacyNumber"
            app:layout_constraintBottom_toBottomOf="@id/txtLegacyNumber"/>

        <TextView
            android:id="@+id/txtVehicleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="vehicleName"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/imgVehicle"
            app:layout_constraintTop_toTopOf="@id/imgVehicle"
            app:layout_constraintBottom_toBottomOf="@id/imgVehicle"/>

        <TextView
            android:id="@+id/txtLegacyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded_outlined_4_radius"
            tools:text="B 1023 KLM"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:padding="6dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/txtStatus"
            app:layout_constraintTop_toBottomOf="@id/divTop"/>

        <ImageView
            android:id="@+id/imgReport"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_label_reported_by"
            android:src="@drawable/ic_person"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/imgAnnouncement"
            app:layout_constraintTop_toBottomOf="@id/imgVehicle"/>

        <TextView
            android:id="@+id/txtReportedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Reported By"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/imgReport"
            app:layout_constraintTop_toTopOf="@id/imgReport"
            app:layout_constraintBottom_toBottomOf="@id/imgReport"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divMiddle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/imgReport" />

        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notes"
            android:contentDescription="@string/content_description_label_notes"
            android:layout_marginTop="21dp"
            app:layout_constraintStart_toStartOf="@id/imgAnnouncement"
            app:layout_constraintTop_toBottomOf="@id/divMiddle"
            />

        <TextView
            android:id="@+id/labelNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_label_complaint_notes"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/imgNote"
            app:layout_constraintTop_toTopOf="@id/imgNote"
            app:layout_constraintBottom_toBottomOf="@id/imgNote"/>

        <TextView
            android:id="@+id/txtNotes"
            android:layout_width="0dp"
            tools:text="lorem ipsum dolor demet"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="50dp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/imgPreview"
            app:layout_constraintTop_toBottomOf="@id/labelNotes"
            app:layout_constraintStart_toStartOf="@id/labelNotes"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="57dp"
            android:contentDescription="@string/content_description_label_image_preview"
            android:layout_height="57dp"
            android:background="@color/black"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@id/txtLegacyNumber"
            app:layout_constraintTop_toTopOf="@id/labelNotes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>